Space in textarea to avoid overlap to float menu

--- a/src/styles/modules/app.css
+++ b/src/styles/modules/app.css
@@ -55,7 +55,7 @@ textarea {
   border-radius: 2px 2px 0 0;
   width: 90%;
   max-width: 1000px;
-  padding: 6px 8px;
+  padding: 16px;
   font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 12px;
   color: #333;
