--- a/styles/app.css
+++ b/styles/app.css
@@ -59,7 +59,7 @@
   border-radius: 2px 2px 0 0;
   width: 90%;
   max-width: 1000px;
-  padding: 6px 8px;
+  padding: 16px;
   font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   font-size: 12px;
   color: #333;
